# Generative-AI

./: .gitignore
0.1 RAG With PDF/: index.py  requirement.md
1. Master Prompting/: 2.Few-Shot-Prompting.py  Zero-Shot-Prompting.py
Parallel-Query-Retrival/: docker-compose.yml  main.py  pyproject.toml
RAG_With_PDF/: main.py  pyproject.toml
agents/: weather.py  weather_agents.py
mem0/: docker-compose-graph.yml  mem.py  pyproject.toml
tokenizer/: frontend.py  tokenizer.py
